# cpp_project

./: README.md  docker-compose.yml
code/opengl_project/OpenGL-Draw-Circle-Simple/: CMakeLists.txt  main.cpp
code/opengl_project/plot_line/: CMakeLists.txt  main.cpp
code/opengl_project/point_render/: CMakeLists.txt  main.cpp
code/opengl_project/simple/: main.cpp
code/opengl_project/spinning_cube/: CMakeLists.txt  main.cpp  main_no_distortion.cpp
code/optmization_proj/splines/: CMakeLists.txt
code/optmization_proj/splines/include/: PointPathRenderer.hpp  cubic_curve.hpp  cubic_spline.hpp
code/optmization_proj/splines/src/: cubic_spline.cpp  temp.cpp
docker/: .gdbinit
docker/cpp/: Dockerfile
docker/gdbExtensions/: init.py
